# learning_rust

./: README.md
Basic_notions/basic_notions/: Cargo.toml  main
Basic_notions/basic_notions/src/: main.rs
Beecrowd/: README.md
Beecrowd/bee_1008/: Cargo.toml
Beecrowd/bee_1009/: Cargo.toml
Beecrowd/bee_1010/: Cargo.toml
Beecrowd/bee_1011/: Cargo.toml
Beecrowd/bee_1012/: Cargo.toml
Beecrowd/bee_1013/: Cargo.toml
Beecrowd/bee_1014/: Cargo.toml
Beecrowd/bee_1015/: Cargo.toml
Beecrowd/bee_1016/: Cargo.toml
Beecrowd/bee_1017/: Cargo.toml
Beecrowd/bee_1018/: Cargo.toml
Beecrowd/bee_1019/: Cargo.toml
Blink/blink/src/: main.rs
Funcoes/funcoes_rust/: Cargo.toml
Memoria_static_stack_heap/memoria_static_stack_heap/: Cargo.toml
Ownership_borrowing/ownership_borrowing/: Cargo.toml
Rust-iot-esp32/rust-http-client-esp32/: Cargo.toml
Rust-iot-esp32/rust-http-server-esp32/: Cargo.toml
Rust-iot-esp32/rust-iot-esp32/: Cargo.toml
Rust-iot-esp32/rust-mqtt-esp32/: Cargo.toml
Rust-iot-esp32/rust-wifi-esp32/: Cargo.toml
Rust-iot-esp32/std-training/: README.md
Textos_caracteres/textos_caracteres/: Cargo.toml
Textos_caracteres/textos_caracteres/src/: main.rs
Wifi-esp32/wifi-esp32/: Cargo.toml  sdkconfig.defaults
blink/: Cargo.toml
comprehensive_rust/: Cargo.toml
comprehensive_rust/src/: collatz.rs  fib.rs  lib.rs  main.rs  nested_arrays.rs
guessing_game/src/: main.rs
memoria_static_stack_heap/src/: main.rs
textos_caracteres/: Cargo.toml
tipos_primitivos/src/: main.rs
variaveis_constantes/src/: main.rs
wifi-esp32/src/: main.rs
(+20 files in other folders)
